refactor: UrlMapper 적용